--- a/gateway/secrets.h.template
+++ b/gateway/secrets.h.template
@@ -1,4 +1,5 @@
 // copy this file to "secrets.h" and fill in the following values
+// This is done so that you don't accidentally commit these changes to Git
 
 // WIFI
 const char* WIFI_SSID     = "SSID";
