--- a/sensor/secrets.h.template
+++ b/sensor/secrets.h.template
@@ -1,5 +1,6 @@
 // copy this file to "secrets.h" and fill in the following values
+// This is done so that you don't accidentally commit these changes to Git
 
 // Unique feather id to be used to distinguish between the different sensors
-const char FEATHER_ID = 'A';
+#define FEATHER_ID "UNIQUE-FEATHER-ID"
 
