--- a/gateway/config.h.template
+++ b/gateway/config.h.template
@@ -1,4 +1,4 @@
-// copy this file to "secrets.h" and fill in the following values
+// copy this file to "config.h" and fill in the following values
 // This is done so that you don't accidentally commit these changes to Git
 
 // WIFI
